@@ -12,7 +12,6 @@
 #define PQXX_H_ZVIEW
 
 #include <cassert>
-#include <filesystem>
 #include <string>
 #include <string_view>
 #include <type_traits>
@@ -112,15 +111,6 @@ public:
   PQXX_ZARGS constexpr zview(char const (&literal)[size]) :
           zview(literal, size - 1)
   {}
-
-#if !defined(_WIN32)
-  /// Construct a `zview` from a `std::filesystem::path`.
-  /** @warn We don't currently support this on Windows, where encoding is a
-   * somewhat complicated question.  Answers on the internet often seem
-   * contradictory.
-   */
-  zview(std::filesystem::path const &p) : zview(p.c_str()) {}
-#endif // _WIN32
 
   /// Either a null pointer, or a zero-terminated text buffer.
   [[nodiscard]] constexpr char const *c_str() const & noexcept
